// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionService #multiSignature should verify 1`] = `
SignedTransactionData {
  "bigNumberService": BigNumberService {
    "configRepository": ConfigRepository {},
  },
  "broadcastData": Object {
    "asset": Object {
      "mandatoryKeys": Array [
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "assetID": 0,
    "fee": "1000000000",
    "id": "2afeb17a2b67e73954503a64fe180ca37d3558e79331167147bb713f8cad219d",
    "moduleID": 4,
    "multiSignature": Object {
      "mandatoryKeys": Array [
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "nonce": "8",
    "senderPublicKey": "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
    "signatures": Array [
      "4d40239d00e095f4069f253f8e68776d514424f37aa3fada5778ca34c2949146c22538cccc6e675dc93dc0da9ca82c13e3bcd60eb454dd9e41c8ba94dd18ed0f",
      "",
      "4d40239d00e095f4069f253f8e68776d514424f37aa3fada5778ca34c2949146c22538cccc6e675dc93dc0da9ca82c13e3bcd60eb454dd9e41c8ba94dd18ed0f",
    ],
    "timestamp": "2021-01-01T12:00:00.000Z",
  },
  "decimals": 8,
  "identifier": "2afeb17a2b67e73954503a64fe180ca37d3558e79331167147bb713f8cad219d",
  "signedData": Object {
    "asset": Object {
      "mandatoryKeys": Array [
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "assetID": 0,
    "fee": "1000000000",
    "id": "2afeb17a2b67e73954503a64fe180ca37d3558e79331167147bb713f8cad219d",
    "moduleID": 4,
    "multiSignature": Object {
      "mandatoryKeys": Array [
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "nonce": "8",
    "senderPublicKey": "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
    "signatures": Array [
      "4d40239d00e095f4069f253f8e68776d514424f37aa3fada5778ca34c2949146c22538cccc6e675dc93dc0da9ca82c13e3bcd60eb454dd9e41c8ba94dd18ed0f",
      "",
      "4d40239d00e095f4069f253f8e68776d514424f37aa3fada5778ca34c2949146c22538cccc6e675dc93dc0da9ca82c13e3bcd60eb454dd9e41c8ba94dd18ed0f",
    ],
    "timestamp": "2021-01-01T12:00:00.000Z",
  },
}
`;

exports[`TransactionService #multiSignature should verify 2`] = `
SignedTransactionData {
  "bigNumberService": BigNumberService {
    "configRepository": ConfigRepository {},
  },
  "broadcastData": Object {
    "asset": Object {
      "mandatoryKeys": Array [
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "assetID": 0,
    "fee": "1000000000",
    "id": "c5a407e8e51e92fc99dabe10d4dae55a0ff4b0a6b88bff4c259d97c7576fe920",
    "moduleID": 4,
    "multiSignature": Object {
      "mandatoryKeys": Array [
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "nonce": "8",
    "senderPublicKey": "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
    "signatures": Array [
      "4d40239d00e095f4069f253f8e68776d514424f37aa3fada5778ca34c2949146c22538cccc6e675dc93dc0da9ca82c13e3bcd60eb454dd9e41c8ba94dd18ed0f",
      "e137048288066e8f8511ec0ab0eaaf11dd5211424ee339630e3ba037393c0eb47f2ad462bac8b2643a365d41c8b056fbb45cc8e4a3074fd483e66e1523fdc907",
      "4d40239d00e095f4069f253f8e68776d514424f37aa3fada5778ca34c2949146c22538cccc6e675dc93dc0da9ca82c13e3bcd60eb454dd9e41c8ba94dd18ed0f",
    ],
    "timestamp": "2021-01-01T12:00:00.000Z",
  },
  "decimals": 8,
  "identifier": "c5a407e8e51e92fc99dabe10d4dae55a0ff4b0a6b88bff4c259d97c7576fe920",
  "signedData": Object {
    "asset": Object {
      "mandatoryKeys": Array [
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "assetID": 0,
    "fee": "1000000000",
    "id": "c5a407e8e51e92fc99dabe10d4dae55a0ff4b0a6b88bff4c259d97c7576fe920",
    "moduleID": 4,
    "multiSignature": Object {
      "mandatoryKeys": Array [
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "nonce": "8",
    "senderPublicKey": "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
    "signatures": Array [
      "4d40239d00e095f4069f253f8e68776d514424f37aa3fada5778ca34c2949146c22538cccc6e675dc93dc0da9ca82c13e3bcd60eb454dd9e41c8ba94dd18ed0f",
      "e137048288066e8f8511ec0ab0eaaf11dd5211424ee339630e3ba037393c0eb47f2ad462bac8b2643a365d41c8b056fbb45cc8e4a3074fd483e66e1523fdc907",
      "4d40239d00e095f4069f253f8e68776d514424f37aa3fada5778ca34c2949146c22538cccc6e675dc93dc0da9ca82c13e3bcd60eb454dd9e41c8ba94dd18ed0f",
    ],
    "timestamp": "2021-01-01T12:00:00.000Z",
  },
}
`;

exports[`TransactionService #multiSignature should verify 3`] = `
SignedTransactionData {
  "bigNumberService": BigNumberService {
    "configRepository": ConfigRepository {},
  },
  "broadcastData": Object {
    "asset": Object {
      "mandatoryKeys": Array [
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "assetID": 0,
    "fee": "1000000000",
    "id": "5613cabcc9df9b451a4dbf8d5496004811be372f0d38fb5512dbbbd4af5bd93c",
    "moduleID": 4,
    "multiSignature": Object {
      "mandatoryKeys": Array [
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "nonce": "8",
    "senderPublicKey": "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
    "signatures": Array [
      "1a0a9d88ac5ba5be18932bbd95036b3fbfcfab6a4a9619eeafea483baa3b1f84c0ccdaab806fe0620755a314b2c07beef1b87abb23eabbad24c3f7c05c392e0b",
      "e137048288066e8f8511ec0ab0eaaf11dd5211424ee339630e3ba037393c0eb47f2ad462bac8b2643a365d41c8b056fbb45cc8e4a3074fd483e66e1523fdc907",
      "1a0a9d88ac5ba5be18932bbd95036b3fbfcfab6a4a9619eeafea483baa3b1f84c0ccdaab806fe0620755a314b2c07beef1b87abb23eabbad24c3f7c05c392e0b",
    ],
    "timestamp": "2021-01-01T12:00:00.000Z",
  },
  "decimals": 8,
  "identifier": "5613cabcc9df9b451a4dbf8d5496004811be372f0d38fb5512dbbbd4af5bd93c",
  "signedData": Object {
    "asset": Object {
      "mandatoryKeys": Array [
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "assetID": 0,
    "fee": "1000000000",
    "id": "5613cabcc9df9b451a4dbf8d5496004811be372f0d38fb5512dbbbd4af5bd93c",
    "moduleID": 4,
    "multiSignature": Object {
      "mandatoryKeys": Array [
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "nonce": "8",
    "senderPublicKey": "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
    "signatures": Array [
      "1a0a9d88ac5ba5be18932bbd95036b3fbfcfab6a4a9619eeafea483baa3b1f84c0ccdaab806fe0620755a314b2c07beef1b87abb23eabbad24c3f7c05c392e0b",
      "e137048288066e8f8511ec0ab0eaaf11dd5211424ee339630e3ba037393c0eb47f2ad462bac8b2643a365d41c8b056fbb45cc8e4a3074fd483e66e1523fdc907",
      "1a0a9d88ac5ba5be18932bbd95036b3fbfcfab6a4a9619eeafea483baa3b1f84c0ccdaab806fe0620755a314b2c07beef1b87abb23eabbad24c3f7c05c392e0b",
    ],
    "timestamp": "2021-01-01T12:00:00.000Z",
  },
}
`;
